--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -39,5 +41,13 @@
     "vite": "^3.2.4",
     "vitest": "^0.25.3",
     "vue-tsc": "^1.0.9"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.(ts|vue)": ["npm run lint:write", "git add"]
   }
 }
